@@ -10,7 +10,7 @@ For further information regarding the Jenkins-Mesos Framework, please see their 
 
 ##### Version Information:
 
-* **Container Release:** 1.1.0
+* **Container Release:** 1.1.1
 * **Mesos:** 0.24.1-0.2.35.ubuntu1404
 * **Docker:** 1.8.3-0~trusty
 
